<resources>
    <string name="app_name">xx</string>
    <string name="information">信息</string>
    <string name="editor">修改信息</string>
    <string name="cancel">取消修改</string>
    <string name="confirm">确定修改</string>
    <string name="device_name">设备名称</string>
    <string name="device_user">使用人员</string>
    <string name="login">登入</string>
    <string name="phone">手机号登入</string>
    <string name="create_time">创建时间</string>
    <string name="energy">用电能耗</string>
</resources>